--- a/code/styles/components/_users.scss
+++ b/code/styles/components/_users.scss
@@ -7,7 +7,7 @@
 
   svg {
     display: block;
-    margin: 0 auto;
+    margin: -$spacing-horizontal-tiny auto;
     max-width: 250%;
     height: auto;
   }
